Enhancement : Location get lat long

--- a/app/src/main/res/layout/activity_barcode_scan.xml
+++ b/app/src/main/res/layout/activity_barcode_scan.xml
@@ -7,18 +7,21 @@
     tools:context=".BarcodeScan">
     <SurfaceView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/surfaceView"
+        app:layout_constraintTop_toBottomOf="@+id/barcode"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="No Barcode Detected"
         android:id="@+id/barcode"
         android:textSize="14sp"
-        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textColor="#000000"
         android:padding="10dp"
 
         app:layout_constraintEnd_toEndOf="parent"
