--- a/app/src/main/res/layout/activity_capture_image.xml
+++ b/app/src/main/res/layout/activity_capture_image.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CaptureImage">
-    <ImageView
+    <Button
         android:id="@+id/btn_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open Camera"
         android:padding="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/button_theme"
         android:src="@drawable/ic_baseline_linked_camera_24"
         app:layout_constraintStart_toStartOf="parent"
